// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component unit testing renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <input
      class="block p-4 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
      id="default-search"
      placeholder="testing-placeholder"
      required=""
      type="search"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`Input component unit testing renders input with the initial value 1`] = `
<input
  class="block p-4 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
  id="default-search"
  placeholder="testing-placeholder"
  required=""
  type="search"
  value="test value"
/>
`;

exports[`Input component unit testing renders with the correct placeholder content 1`] = `
<input
  class="block p-4 pl-10 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
  id="default-search"
  placeholder="testing-placeholder"
  required=""
  type="search"
  value=""
/>
`;
